# truchet-gh

./: Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js  tailwind.css
src/: main.rs
