[package]
name = "truchet-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
base64 = "0.21.4"
gloo = "0.10"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]